--- a/index.html
+++ b/index.html
@@ -38,6 +38,15 @@
             font-size: smaller;
         }
 
+        .post-header{
+            color: white;
+            height: 50px;
+            box-sizing: border-box;
+            width: inherit;
+            padding: 5px;
+            border-bottom: 1px solid #b5b5b5;
+        }
+
         nav{
             display: inline-block;
             color: white;
@@ -47,10 +56,8 @@
         }
 
         #logo{
-            height: 60px;
+            height: 40px;
             position: relative;
-            left: 150px;
-            top: 55px;
         }
 
         #searchbar{
@@ -59,17 +66,16 @@
             width: 30%;
             margin-left: 35vw;
             margin-right: 35vw;
-            color: black;
+            color: #fafafa;
             text-align: center;
             border: solid #b5b5b5 1px;
             border-radius: 3px;
         } 
 
         #actions{
-            height: 50px;
+            height: 40px;
             position: relative;
-            right: -1000px;
-            top: -50px;
+            right: 0px;
         }
 
         .user image{
@@ -94,8 +100,8 @@
         }
 
         .post-header{
-            color: black;
-            height: 60px;
+            color: white;
+            height: 50px;
             box-sizing: border-box;
             width: inherit;
             padding: 5px;
