--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             position: relative;
         }
 
-        #searchbar{
+        input{
             height: 25px;
             position: relative;
             width: 30%;
@@ -114,7 +114,7 @@
     <nav>
         <img id="logo" src="img/instagran.png" alt="instagran logo" >
     
-        <input id="searchbar" type="text" placeholder="search"/>
+        <input type="text" placeholder="search"/>
 
         <img id="actions" src="img/actions.png" alt="actions" >
     </nav>
